--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-# Python
+# Python artifacts
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-.venv/
-.env
-# VSCode
-.vscode/
-# OS
+*.py[cod]
+*.egg-info/
+
+# Virtual environments
+.venv*/
+
+# Build artifacts
+build/
+dist/
+
+# macOS
 .DS_Store
-Thumbs.db
