--- a/drawing_data/xyz/SIM_basic_gcode.yaml
+++ b/drawing_data/xyz/SIM_basic_gcode.yaml
@@ -7,7 +7,7 @@ defaults:
 
 jobs:
   - type: gcode
-    file: "sample.gcode"  # G-codeファイルパス
+    file: "cube.gcode"  # G-codeファイルパス
     origin: [0, 0, 0]  # XYZ原点オフセット
 
 visual:
