--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = [
+    "setuptools @ file:../../lab_automation_libs/internal-PyPI/dist/setuptools-81.0.0-py3-none-any.whl",
+    "wheel @ file:../../lab_automation_libs/internal-PyPI/dist/wheel-0.46.3-py3-none-any.whl",
+    "packaging @ file:../../lab_automation_libs/internal-PyPI/dist/packaging-26.0-py3-none-any.whl",
+]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -12,7 +16,7 @@ requires-python = ">=3.8"
 authors = [{ name = "CNC Maintainers" }]
 
 dependencies = [
-    "cnc-drivers>=0.1.0",
+    "cnc-drivers @ file:../../lab_automation_libs/internal-PyPI/dist/cnc_drivers-0.1.0-py3-none-any.whl",
     "matplotlib>=3.5",
     "PyYAML>=5.4",
     "svgpathtools>=1.5",
